--- a/app/src/main/assets/script.html
+++ b/app/src/main/assets/script.html
@@ -1,39 +1,10 @@
-<script type="text/javascript">
-function () {
-/*document.getElementById("hplogo").src = "https://android.com.pl/images/user-images/2017/03/android-developer2.png";
-document.bgColor = "#454343";
-document.getElementById("lst-ib").value = "Some random text";*/
-alert('im injected')
+<html>
+<body>
+<script src="style.js"></script>
+<!--<script type="text/javascript">
+    function test() {
+    alert('hey.. im poor alert');
 }
-var player;
-function onYouTubeIframeAPIReady() {
-player = new YT.Player('player', {
-height: '150',
-width: '300',
-videoId: 'EW5w684bYFw',
-events: {
-'onReady': onPlayerReady,
-'onStateChange': onPlayerStateChange
-}
-});
-}
-
-function test() {
-    alert('im here')
-}
-function onPlayerReady(event) {
-event.target.playVideo();
-}
-var done = false;
-
-function onPlayerStateChange(event) {
-if (event.data == YT.PlayerState.PLAYING && !done) {
-//      setTimeout(stopVideo, 6000);
-done = true;
-}
-}
-
-function stopVideo() {
-player.stopVideo();
-}
-</script>
+</script>-->
+</body>
+</html>
